CED - (C)ompact (E)ncoding (D)etection (by Google)
MUI - (M)ultilingual (U)ser (I)nterface
NLS - (N)ew (L)anguage (S)trings (need for translation)
ONI - (ONI)guruma Regex engine
SCI - (SCI)ntilla Library
UCD - (UCD)ARDET is an Encoding Detector Library
GRE - (GRE)pWinNP3 Search in Files Tool


=====================================================
Current BETA Version 5.20.429.(build_#) (2020-04-29)
=====================================================

-----------------------------------------------------
NEW:
-----------------------------------------------------
- 
- Toolbar hint for zoomed view.
- "waifu2x" scaled std toolbar bitmaps.
- Call Notepad3 with case-sensitive and dot-match-all flag (if applicable).
- Add "Overlapping Search" in Find/Replace dialog window.
- Integration of "grepWinNP3", a Search Tool in files (v2.1.0.6) (GRE).

-----------------------------------------------------
CHANGES:
-----------------------------------------------------
- 
- Filevar tag "fill-column" changes to support multi-column marker.
- Installer to let the user select the target directory.
- Default long-line wrap settings.
- Remove spinning wait-cursor for text operations (may need reactivation for long operations).
- "grepWinNP3": move packages.config to corresponding project folder(GRE).
- Add filepath to message on file locking error.
- Update Oniguruma Regex (ONI) engine version 6.9.5 (2020/04/20).
- Update Scintilla Library (SCI) version 4.3.3 (2020/04/27).

-----------------------------------------------------
ENHANCEMENT:
-----------------------------------------------------
- 
- "grepWinNP3": add "Dark mode" settings (GRE).
- "grepWinNP3": asynchronous search & replace version (GRE).
- DPI awareness and multi monitor handling.

-----------------------------------------------------
FIXES:
-----------------------------------------------------
- 
- Initial behavior on open Find/Replace dialog.
- Lost Find/Replace dialog settings.