@@ -3,7 +3,7 @@
   <assemblyIdentity
     name="Notepad3"
     processorArchitecture="*"
-    version="5.20.430.2"
+    version="5.20.502.1"
     type="win32"
   />
   <description>Notepad3 BETA</description>
