@@ -8,12 +8,12 @@
 #define SAPPNAME "Notepad3"
 #define VERSION_MAJOR 5
 #define VERSION_MINOR 20
-#define VERSION_REV 430
-#define VERSION_BUILD 2
+#define VERSION_REV 502
+#define VERSION_BUILD 1
 #define SCINTILLA_VER 433
 #define ONIGURUMA_REGEX_VER 6.9.5
 #define UCHARDET_VER 2018.09.27
 #define TINYEXPR_VER 2018.05.11
 #define UTHASH_VER 2.1.0
 #define VERSION_PATCH BETA
-#define VERSION_COMMIT_ID nebukadn
+#define VERSION_COMMIT_ID dkt1-amr
